# yep

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/ast/: Cargo.toml
crates/ast/src/: error.rs  expr.rs  item.rs  keyword.rs  lib.rs  literal.rs  name.rs  pattern.rs  punct.rs  spanned.rs  token.rs
crates/fuzzer/: Cargo.toml
crates/fuzzer/in/: _example1  example1  example2  example3  example4  example5
crates/fuzzer/src/: lib.rs  main.rs  show_queue.rs  validate_tokens.rs
crates/hir/: Cargo.toml
crates/hir/src/: arena.rs  lib.rs
crates/hir/src/amt/: expr.rs  literal.rs  mod.rs  name.rs  pattern.rs  types.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  numbers.rs  syntax.rs  tests.rs  tokens.rs
crates/lexer/tests/: example1.tokens  example1.wa  example2.tokens  example2.wa  numbers.tokens  numbers.wa  numbers_invalid.tokens  numbers_invalid.wa
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  expr.rs  formatting.rs  formatting_impl.rs  helpers.rs  items.rs  lib.rs  patterns.rs  tests.rs  validation.rs
crates/parser/tests/: example1.ast  example1.wa  example2.ast  example2.wa  example3.ast  example4.ast  example4.wa  example5.ast  example5.wa  example6.ast  example6.wa  example7.ast  example7.wa  example8.ast  example8.wa
crates/repl/: Cargo.toml
crates/repl/src/: main.rs
crates/tinystring/: Cargo.toml
crates/tinystring/src/: lib.rs
crates/wamos-parser/: Cargo.toml
crates/wamos-parser/src/: lib.rs  spanned.rs  text_range.rs
crates/wamos-parser/src/lexer/: idents.rs  mod.rs  numbers.rs  syntax.rs  tokens.rs
crates/wamos-parser/src/parser/: expr.rs  formatting.rs  formatting_impl.rs  helpers.rs  items.rs  mod.rs  patterns.rs
fuzz/: Cargo.toml
fuzz/corpus/parse_lower/: example
fuzz/fuzz_targets/: parse_lower.rs
src/: main.rs
