[workspace]

[package]
name = "fuzzer"
version = "0.1.0"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "0.8.0"
ast = { path = "../ast" }
parser = { path = "../parser" }
lexer = { path = "../lexer" }
