[workspace]

[package]
name = "fuzzer"
version = "0.1.0"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = { version = "0.8.0", optional = true }
ast = { path = "../ast" }
parser = { path = "../parser" }
lexer = { path = "../lexer", features = ["fuzz"] }
arbitrary = "0.4.7"

[[bin]]
name = "queue"
path = "src/show_queue.rs"

[features]
default = ["afl"]
