[package]
name = "lexer"
version = "0.1.0"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
anyhow = "1.0"
logos = "0.12.0"
string-interner = "0.12.2"

[dev-dependencies]
assert_matches = "1.4"
