[package]
name = "lexer"
version = "0.1.0"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
logos = "0.12.0"
arbitrary = { version = "0.4.7", optional = true }

[dev-dependencies]
difference = "2.0"

[features]
fuzz = ["arbitrary", "ast/fuzz"]
